[tool.poetry]
name = "gcn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "^1.22.2"
tensorflow-macos = "^2.8.0"
networkx = "^2.6.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
